force-app/main/default/objects/Deal_Merchant_Payments__c/Deal_Merchant_Payments__c.object-meta.xml
<CustomObject>
    <description>This object is part of the Product Build.
It tracks payments TAD has made to Merchants for specific Deals.</description>
    <label>Merchant Payments</label>
    <nameField>
        <displayFormat>MP-{000000}</displayFormat>
        <label>Deal Merchant Payments Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Merchant Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>