force-app/main/default/objects/Deal_Merchant_Payments__c/fields/Deal__c.field-meta.xml
<CustomField>
    <fullName>Deal__c</fullName>
    <description>This is the deal these payments are related to.</description>
    <inlineHelpText>This is the deal these payments are related to.</inlineHelpText>
    <label>Deal</label>
    <referenceTo>Deal__c</referenceTo>
    <relationshipName>Deal_Merchant_Payments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>