force-app/main/default/objects/Deal_Merchant_Payments__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <inlineHelpText>Please enter in when this payment is due for payment.</inlineHelpText>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>