force-app/main/default/objects/Deal_Merchant_Payments__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <label>Invoice #</label>
    <length>18</length>
    <type>Text</type>
</CustomField>