force-app/main/default/objects/Deal_Merchant_Payments__c/fields/Merchant__c.field-meta.xml
<CustomField>
    <fullName>Merchant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This is the Merchant account that TAD is making the payments to for the services for this deal.</inlineHelpText>
    <label>Merchant</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Product Partner</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipName>Deal_Merchant_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>