force-app/main/default/objects/Deal_Merchant_Payments__c/fields/Paid_Status_Icon__c.field-meta.xml
<CustomField>
    <fullName>Paid_Status_Icon__c</fullName>
    <formula>IF(ISBLANK (Invoice_Created_Date__c),

IMAGE(
&quot;/resource/1535695465000/GraphicsPackNew/silk/16/silk/cross.png&quot; ,
&quot;Payment Status&quot;
),

IMAGE(
&quot;/resource/1535695465000/GraphicsPackNew/silk/16/silk/tick.png&quot;,
&quot;Payment Status&quot;
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Paid Status Icon</label>
    <type>Text</type>
</CustomField>