force-app/main/default/objects/Deal_Merchant_Payments__c/fields/Payment__c.field-meta.xml
<CustomField>
    <fullName>Payment__c</fullName>
    <inlineHelpText>This number relates to which number payment this is out of all the required payments for this deal. For example, there may be three payments in total. This is the second payment, therefore, this would be &quot;2&quot;.</inlineHelpText>
    <label>Payment #</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>