force-app/main/default/objects/Deal_Merchant_Payments__c/fields/Payment_Currency__c.field-meta.xml
<CustomField>
    <fullName>Payment_Currency__c</fullName>
    <inlineHelpText>Please select the currency the payment will be made in.</inlineHelpText>
    <label>Payment Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Currencies</valueSetName>
    </valueSet>
</CustomField>